tests/baselines/reference/reactTransitiveImportHasValidDeclaration.errors.txt
index.ts(1,1): error TS18055: Declaration file contains synthesized type reference directives: '"react"'


==== node_modules/react/index.d.ts (0 errors) ====
    declare namespace React {
        export interface DetailedHTMLProps<T, U> {}
        export interface HTMLAttributes<T> {}
    }
    export = React;
    export as namespace React;
==== node_modules/create-emotion-styled/types/react/index.d.ts (0 errors) ====
    /// <reference types="react" />
    declare module 'react' { // augment
        interface HTMLAttributes<T> {
            css?: unknown;
        }
    }
    export interface StyledOtherComponentList {
        "div": React.DetailedHTMLProps<React.HTMLAttributes<HTMLDivElement>, HTMLDivElement>
    }
    export interface StyledOtherComponent<A, B, C> {}
    
==== node_modules/create-emotion-styled/index.d.ts (0 errors) ====
    export * from "./types/react";
    
==== node_modules/react-emotion/index.d.ts (0 errors) ====
    import {StyledOtherComponent, StyledOtherComponentList} from "create-emotion-styled";
    export default function styled(tag: string): (o: object) => StyledOtherComponent<{}, StyledOtherComponentList["div"], any>;
    
==== index.ts (1 errors) ====
    import styled from "react-emotion"
    ~~~~~~
!!! error TS18055: Declaration file contains synthesized type reference directives: '"react"'
    
    const Form = styled('div')({ color: "red" })
    
    export default Form
    